--- a/projects/calculator/package.json
+++ b/projects/calculator/package.json
@@ -21,6 +21,7 @@
     "gulp-modernizr": "^2.0.0",
     "gulp-postcss": "^7.0.1",
     "gulp-watch": "^5.0.0",
+    "paper": "^0.11.5",
     "postcss": "^6.0.18",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.1.0",
